Events mandatory bug fixed

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event_create_edit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event_create_edit.html
@@ -346,8 +346,16 @@
   // All members of group or selected invitees
   
     $(document).ready(function () {
-
     var tim = 1000  
+    $('#has_attendees').removeAttr("required");
+
+    if($('#open_eventYes').is(':checked')) { 
+      $('label[for="has_attendees"]').fadeOut(tim);
+       $('#has_attendees').fadeOut(tim);
+       $('#has_attendees').removeAttr("required");
+       $('#panel_Basic').find('.small-5').find('#has_attendees').next().next().next().fadeOut(tim);
+       $('#panel_Basic').find('.small-5').find('#has_attendees').next().fadeOut(tim);   
+    }
 
     $('#open_eventYes').click(function()
           {
@@ -363,7 +371,7 @@
         {
   $('label[for="has_attendees"]').fadeIn(tim);
   $('#has_attendees').fadeIn(tim);
-  $('#has_attendees').attr({"required":""});
+  $('#has_attendees').removeAttr("required");
   $('#panel_Basic').find('.small-5').find('#has_attendees').next().next().next().fadeIn(tim);
   $('#panel_Basic').find('.small-5').find('#has_attendees').next().fadeIn(tim);
   });         
