--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -125,7 +125,7 @@
                 {% with group_obj.member_of_names_list.0 as sg_type %}
                   <li><a href="{% if sg_type != 'CourseEventGroup' %}{% url 'edit_event_group' groupid 'ProgramEventGroup' %}{% else %}{% url 'edit_event_group' groupid sg_type %}{% endif %}" class="tiny radius"><i class="fi-page-edit"></i> {% trans "Edit " %}{% if sg_type == "CourseEventGroup" %}{% trans "eCourse" %}{% else %}{% trans "Event" %}{% endif %}</a></li>
                 {% endwith %}
-                <li><a class="tiny radius" href="{% url 'create_course_struct' group_id group_obj.pk %}"> <i class="fi-clipboard-notes"></i> {% if group_obj.collection_set %}{% trans "Edit Course Structure" %}{% else %}{% trans "Add  Course Structure" %}{% endif %}</a></li>
+                <li><a class="tiny radius" href="{% url 'create_course_struct' group_id group_id %}"> <i class="fi-clipboard-notes"></i> {% if group_obj.collection_set %}{% trans "Edit Course Structure" %}{% else %}{% trans "Add  Course Structure" %}{% endif %}</a></li>
                 {% comment %}
                 <li><a class="tiny radius settings" ><i class="fi-clock"></i> {% trans " Plan Release Dates" %}</a></li>
                 {% endcomment %}
@@ -368,7 +368,7 @@
 	$(document).on('click','.enroll-btn',function(){
 		//trigger the ajax call to enroll
 		$.ajax({
-			url: "{% url 'enroll_to_course' group_obj.pk %}",
+			url: "{% url 'enroll_to_course' group_id %}",
 
 			data: {
 				'csrfmiddlewaretoken': "{{csrf_token}}"
