--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/quiz_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/quiz_player.html
@@ -1,4 +1,5 @@
 {% load ndf_tags %}
+{% load trim from simple_filters %}
 {% load i18n %}
 {% get_group_name groupid as group_name_tag %}
 {% get_user_quiz_resp node request.user as total_and_curr_ans_dict %}
@@ -49,15 +50,15 @@
 				<div class="quiz_qtn">
 					{% if node.quiz_type == "Single-Choice" %}
 						{% for each_opt in node.options %}
-							<input type="radio" name="quiz_ans"  value="{{each_opt}}"
-							{% if each_opt in total_and_curr_ans_dict.recent_ans  %}
+							<input type="radio" name="quiz_ans"  value="{{each_opt|trim}}"
+							{% if each_opt|trim in total_and_curr_ans_dict.recent_ans  %}
 							checked
 							{% endif %}
 
-							{% if each_opt in node.correct_answer %}
-								class="choice" id="{{each_opt}}">{{each_opt}}<span class='fi-check hide chk_ans_lbl'></span>
+							{% if each_opt|trim in node.correct_answer %}
+								class="choice" id="{{each_opt|trim}}">{{each_opt|trim}}<span class='fi-check hide chk_ans_lbl'></span>
 							{% else %}
-								class="choice" id="{{each_opt}}">{{each_opt}}<span class='fi-x hide chk_ans_lbl'></span>
+								class="choice" id="{{each_opt|trim}}">{{each_opt|trim}}<span class='fi-x hide chk_ans_lbl'></span>
 							{% endif %}
 							<br/>
 						{% endfor %}
@@ -73,14 +74,14 @@
 						{% endcomment %}
 					{% elif node.quiz_type == "Multiple-Choice" %}
 						{% for each_opt in node.options %}
-							<input type="checkbox" name="quiz_ans" value="{{each_opt}}"
-							{% if each_opt in total_and_curr_ans_dict.recent_ans %}
+							<input type="checkbox" name="quiz_ans" value="{{each_opt|trim}}"
+							{% if each_opt|trim in total_and_curr_ans_dict.recent_ans %}
 							checked
 							{% endif %}
-							{% if each_opt in node.correct_answer %}
-								class="choice" id="{{each_opt}}">{{each_opt}}<span class='fi-check hide chk_ans_lbl'></span>
+							{% if each_opt|trim in node.correct_answer %}
+								class="choice" id="{{each_opt|trim}}">{{each_opt|trim}}<span class='fi-check hide chk_ans_lbl'></span>
 							{% else %}
-								class="choice"  id="{{each_opt}}">{{each_opt}}<span class='fi-x hide chk_ans_lbl'></span>
+								class="choice"  id="{{each_opt|trim}}">{{each_opt|trim}}<span class='fi-x hide chk_ans_lbl'></span>
 							{% endif %}
 							<br/>
 						{% endfor %}
