--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/upload_pic_widget.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/upload_pic_widget.html
@@ -10,7 +10,7 @@
           {% get_relation_value node.pk 'has_thumbnail' as grel_dict %}
           {% if prof_pic_obj %}
             <img src="{{MEDIA_URL}}{{prof_pic_obj.if_file.original.relurl}}" class="img-height"/>
-          {% elif grel_dict %}   
+          {% elif grel_dict %}
             <img src="{{MEDIA_URL}}{{grel_dict.grel_node.if_file.thumbnail.relurl}}" class="img-height"/>
           {% else %}
               {% if "Author" in group_object.member_of_names_list %}
@@ -38,7 +38,7 @@
 
 
             <div id="{{widget_for}}_prof_pic_prop" class="reveal-modal medium old-pics-data" data-reveal >
-                <a href="#" id="{{widget_for}}_upload_photo">
+                <a id="{{widget_for}}_upload_photo">
                   <div id="upload-photo-div" class="text-center">
                     <label class="upload_photo_lbl fi-upload">Upload New Photo</label>
                   </div>
@@ -73,7 +73,7 @@
                         {% endif %}
 
                         <div class="{{widget_for}}_upload_cancel_div">
-                            <img id="{{widget_for}}_img_preview" src="#" alt="New profile photo" />
+                            <img id="{{widget_for}}_img_preview" src="" alt="New profile photo" />
                             <input type="submit" id="{{widget_for}}_submitpostid" value="Save" class="button tiny margin-p5 submit-btn" />
                             <input type="button" class="button tiny margin-p5" id="{{widget_for}}_btnUploadCancel" value="Cancel">
                         </div>
