--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -340,8 +340,33 @@
           {% include 'ndf/pagination.html' with urlname="course_raw_material_paged" first_arg=group_name_tag    page_info=raw_material_page_info %}
         {% endif  %}
     </div>
-
   </div>
+<script type="text/javascript">
+  $(function() {
+    $("#selectCourseTab").on('change', function() {
+        switch($(this).val()) {
+          case 'about_course':
+            window.location="{% url 'course_about' group_id %}"
+          break;
+          case 'course_content':
+            window.location="{% url 'course_content' group_id %}"
+          break;
+          case 'raw_material':
+            window.location="{% url 'course_raw_material' group_id %}"
+          break;
+          case 'notebook':
+            window.location="{% url 'course_notebook' group_id %}"
+          break;
+          case 'gallery':
+            window.location="{% url 'course_gallery' group_id %}"
+          break;
+          case 'dashboard':
+            window.location="{% url 'course_dashboard' group_id %}"
+          break;
+        }
+    })
+  })
+</script>
 {% endblock %}
 
 
