--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/filters.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/filters.html
@@ -7,10 +7,10 @@
 	filtersObjArr -- is array containing all selected filters.
 		- Each of the filter is contained in following format of JS Object:
 			{
-				"selFieldValue": selFieldValue,
-				"selFieldGstudioType": selFieldGstudioType,
-				"selFieldText": selFieldText,
-				"selFieldPrimaryType": selFieldPrimaryType
+				"selFieldValue": <selFieldValue>,
+				"selFieldGstudioType": <selFieldGstudioType>,
+				"selFieldText": <selFieldText>,
+				"selFieldPrimaryType": <selFieldPrimaryType>
 			}
 
 	Example - for filter "audience: Teachers"
@@ -182,7 +182,6 @@
 		$selectValue = $("select[name='filter-field-value']"); // second <select>
 
 	$('#filter_button').on('click', function(){
-		console.log('showing');
 		$selectName.show();
 		$(this).find('span').hide();
 		$("#filter-clear-btn").show();
