--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gcourse_event_group.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gcourse_event_group.html
@@ -23,14 +23,15 @@
 
 
 {% block head %}
-{{block.super}}
-  <script type="text/javascript" src="/static/ndf/bower_components/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML" async></script>
 
-  <!-- 
+  {{block.super}}
+
+  <!--
+  <script type="text/javascript" src="/static/ndf/bower_components/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML" async></script>
   <script type="text/javascript" src="/static/ndf/bower_components/foundation-datepicker/js/foundation-datepicker.js"></script>
   <link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/foundation-datepicker/stylesheets/foundation-datepicker.css">
    -->
-   
+
   <script src="/static/ndf/bower_components/jquery-ui/jquery-ui.js"></script> <!-- checked -->
 
 {% endblock %}
@@ -38,15 +39,16 @@
 
 {% block body_content %}
   {{block.super}}
-    <!-- start date -->
+  <!-- start date -->
 
-    <div id="date_reveal_modal" class="reveal-modal medium alert-box radius" data-reveal data-alert>
+  <div id="date_reveal_modal" class="reveal-modal medium alert-box radius" data-reveal data-alert>
     <label>{% trans 'Set Release Date to following Sessions: ' %}</label><hr/>
     {% get_all_subsections_of_course group_id group_obj.pk as all_css %}
 
     <script type="text/javascript">
       var all_css_js_var = {{all_css|safe}}
     </script>
+
     <div class="all_css_div">
     {% for each_css in all_css %}
       <div class="row release_date_div">
@@ -65,15 +67,15 @@
     </div>
     <a class="close-reveal-modal">&#215;</a>
 
-    </div> 
+  </div>
 
-{% endblock %}
+{% endblock body_content %}
 
 
 {% block script %}
-{{block.super}}
-// <script type="text/javascript">
-  
+  {{block.super}}
+  // <script type="text/javascript">
+
   $(document).on("change", ".date_month_day_year", function(){
     $(".save_date").attr("disabled",false);
   })
@@ -112,9 +114,7 @@
           location.reload();
       },
     });//end of ajax
-
     // console.log(JSON.stringify(all_css_js_var))
-
   })
 
   // Settings-------------------------------------------------------------
@@ -123,13 +123,13 @@
   });
 
   // On close event of reveal-modal (eventModal) -------------------------------------------------------------
-    $(document).on('closed.fndtn.reveal', '#eventModal[data-reveal]', function () {
-      // Reset reveal-modal content & it's setting
-      $("#eventModalLabel").text("<p>Please select course type.</p>");
-      $("#eventModal")
-        .removeClass("success").removeClass("warning").removeClass("alert").removeClass("small")
-        .addClass("medium")
-    });
+  $(document).on('closed.fndtn.reveal', '#eventModal[data-reveal]', function () {
+    // Reset reveal-modal content & it's setting
+    $("#eventModalLabel").text("<p>Please select course type.</p>");
+    $("#eventModal")
+      .removeClass("success").removeClass("warning").removeClass("alert").removeClass("small")
+      .addClass("medium")
+  });
 
   $(".date_month_day_year").datepicker({
     changeMonth: true,
@@ -138,14 +138,12 @@
     defaultDate: '0'
   });
 
-
   // Cancel/Abort Upload-------------------------------------------------------------
   $("#btnUploadCancel").click(function() {
     $(".save_cancel").addClass("hide");
     $("#docFile").val("");
     $(".upload-btn").css("display","block")
   });
-
 
   //Upload file action validation ---------------------------------------------------------------
   $(document).on('change','#docFile',function(){
@@ -186,7 +184,6 @@
       $("#eventModal").foundation('reveal', 'open');
     }
     */
-
   });
 
   // Update profile photo -----------------------------------------------------------------------
