--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_partner.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_partner.html
@@ -5,8 +5,8 @@
 
 {% block title %} {% if node %}Edit {% else %}Create New {% endif %}{{parent_obj_partner.name}} {{node.name}}{% endblock %}
 
-{% block meta_content %}  
-<h2 class="subheader"> {{parent_obj_partner.name}} {{group_id}}</h2>
+{% block meta_content %}
+<h2 class="subheader"> {{parent_obj_partner.name}}</h2>
 {% endblock %}
 
 {% block related_content %}
@@ -14,7 +14,7 @@
    <b>{% trans "Existing Partners:" %}</b>
 
     {% get_existing_groups_excluding_username as groups%}
-    {% for items in groups %}  
+    {% for items in groups %}
       <br>{{items.name|truncatechars:25}}
     {% endfor %}
   {% endif %}
@@ -34,7 +34,7 @@
     <div id="people-details-edit-div" class="tabs-content">
         <div class="row">
           <div class="row">
-            <div class="small-3 columns"> 
+            <div class="small-3 columns">
               <label class="right inline">Name
               </label>
             </div>
@@ -43,7 +43,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="small-3 columns"> 
+            <div class="small-3 columns">
               <label class="right inline">Altnames
               </label>
             </div>
@@ -53,16 +53,16 @@
           </div>
 
           <div class="row">
-            <div class="small-3 columns"> 
+            <div class="small-3 columns">
               <label class="right inline">Description
               </label>
             </div>
             <div class="small-5 columns end">
-              {% include "ndf/add_editor.html" with var_name="content_org" var_placeholder="Enter the content here" var_value=node.content_org|default_if_none:"" node_id=node.pk %}      
+              {% include "ndf/add_editor.html" with var_name="content_org" var_placeholder="Enter the content here" var_value=node.content_org|default_if_none:"" node_id=node.pk %}
             </div>
           </div>
           <div class="row">
-            <div class="small-3 columns"> 
+            <div class="small-3 columns">
               <label class="right inline">House/Street
               </label>
             </div>
@@ -71,7 +71,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="small-3 columns"> 
+            <div class="small-3 columns">
               <label class="right inline">Town/City
               </label>
             </div>
@@ -80,7 +80,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="small-3 columns"> 
+            <div class="small-3 columns">
               <label class="right inline">Pin Code
               </label>
             </div>
@@ -89,7 +89,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="small-3 columns"> 
+            <div class="small-3 columns">
               <label class="right inline">E-mail Id
               </label>
             </div>
@@ -100,7 +100,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="small-3 columns"> 
+            <div class="small-3 columns">
               <label class="right inline">Website
               </label>
             </div>
@@ -109,7 +109,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="small-3 columns"> 
+            <div class="small-3 columns">
               <label class="right inline">Mobile No.
               </label>
             </div>
@@ -118,7 +118,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="small-3 columns"> 
+            <div class="small-3 columns">
               <label class="right inline">Altertnate No.
               </label>
             </div>
@@ -157,39 +157,39 @@
 {% comment %}
       <div class="small-12 columns" style='display:table;  border:1px;   border-spacing:10px; '>
         <div style='display:table-row;' >
-          <div style='display:table-cell;'> 
-            <font size="3">{% trans "Name of the Partner" %}</font> 
+          <div style='display:table-cell;'>
+            <font size="3">{% trans "Name of the Partner" %}</font>
           </div>
-          <div style='display:table-cell;'> 
+          <div style='display:table-cell;'>
             <input type="text"  id="group_name" name="groupname" placeholder="Enter partner Name" required>
       <small class="error">{% trans "Name is required and must be a string" %}</small>
             <label id="message" style="display:none; color:red"></label>
-          </div> 
+          </div>
             <font size="3" >{% trans "Partner Type" %}</font>
-          <div style='display:table-cell;'> 
+          <div style='display:table-cell;'>
             <select name="group_type" class="gtype">
               <option id="PUBLIC">{% trans "PUBLIC" %}</option>
               <option id="PRIVATE">{% trans "PRIVATE" %}</option>
               <option id="ANONYMOUS">{% trans "ANONYMOUS" %}</option>
-            </select> 
+            </select>
           </div>
         </div>
 
         <div style='display:table-row;'>
-          <div style='display:table-cell;'> 
+          <div style='display:table-cell;'>
             <font size="3" >{% trans "Partner Editing policy" %}</font>
           </div>
-          <div style='display:table-cell;'> 
+          <div style='display:table-cell;'>
             <select name="edit_policy" class="editp">
               <option id="EDITABLE_NON_MODERATED">{% trans "EDITABLE_NON_MODERATED" %}</option>
               <option id="EDITABLE_MODERATED">{% trans "EDITABLE_MODERATED" %}</option>
               <option id="NON_EDITABLE">{% trans "NON_EDITABLE" %}</option>
-            </select> 
+            </select>
           </div>
-          <div style='display:table-cell;'> 
+          <div style='display:table-cell;'>
             <font size="3" >{% trans "Partner Subscription policy" %}</font>
           </div>
-          <div style='display:table-cell;'> 
+          <div style='display:table-cell;'>
             <select name="subscription" class="subscptn">
               <option id="OPEN">{% trans "OPEN" %}</option>
               <option id="BY_REQUEST">{% trans "BY_REQUEST" %}</option>
@@ -198,20 +198,20 @@
           </div>
         </div>
   <div style='display:table-row;'>
-          <div style='display:table-cell;'> 
+          <div style='display:table-cell;'>
             <font size="3" >{% trans "Group Encryption policy" %}</font>
           </div>
-          <div style='display:table-cell;'> 
+          <div style='display:table-cell;'>
             <select name="encryption" class="encr" disabled>
               <option id="NOT_ENCRYPTED">{% trans "NOT_ENCRYPTED" %}</option>
               <option id="ENCRYPTED">{% trans "ENCRYPTED" %}</option>
             </select>
-          </div>  
+          </div>
 
-          <div style='display:table-cell;'> 
+          <div style='display:table-cell;'>
             <font size="3" >{% trans "Group Existance visibility" %}</font>
           </div>
-          <div style='display:table-cell;'> 
+          <div style='display:table-cell;'>
             <select name="existance" class="existance" disabled>
               <option id="ANNOUNCED">{% trans "ANNOUNCED" %}</option>
               <option id="NOT_ANNOUNCED">{% trans "NOT_ANNOUNCED" %}</option>
@@ -219,10 +219,10 @@
           </div>
         </div>
         <div style='display:table-row;'>
-          <div style='display:table-cell;' colspan='2'> 
+          <div style='display:table-cell;' colspan='2'>
             <!-- <input type="button" id="savegrp" value="Create Group"  class="button" onClick="check_values()">
             <input type="submit" id="grpsubmit" value="Create Group" class="button" style="visibility:hidden" > -->
-            
+
             <input type="submit" value="Create Partner" id="grpsubmit" class="button">
           </div>
         </div>
@@ -279,7 +279,7 @@
       $("#group_name").change(function(){
       var name = $("#group_name").val().trim();
       var nodes = $("#nodes_list").val();
-      if (nodes.indexOf(name) > 0)  
+      if (nodes.indexOf(name) > 0)
       {
         $("#message").css("display", "block");
         $("#message").html("Name '"+ name +"' already exist .. Please choose another name");
@@ -292,23 +292,23 @@
     });
     */
 
-    // New Form: Conditional Display 
+    // New Form: Conditional Display
       $(".login-mode").change(function(){
         /* Hide other options if anonymous login is allowed */
-        $("#closed-group").slideToggle();     
+        $("#closed-group").slideToggle();
       });
 
       $("#member-mode").slideToggle();
       $("[name='join-mode']").change(function(){
         /* Hide invitation options if open membership */
-        $("#member-mode").slideToggle();     
+        $("#member-mode").slideToggle();
       });
 
       $("[name='edit-mode']").change(function(){
         /* Hide moderation options if editing is disabled */
-        $("#moderate-mode").slideToggle();     
+        $("#moderate-mode").slideToggle();
       });
-    
+
       // $("#group_name").focusout(function(){
       //    check_group_name();
       // }); //end_focusout
@@ -321,7 +321,7 @@
 
   $(".input_only_num").keydown(function (e) {
         // Allow ctrl+A
-    if ((e.keyCode == 65 && e.ctrlKey === true) || 
+    if ((e.keyCode == 65 && e.ctrlKey === true) ||
              // Allow: home, end, left, right, down, up and //Allow delete, backspace, tab
             (e.keyCode >= 35 && e.keyCode <= 40) || e.keyCode==46 || e.keyCode==8 || e.keyCode==9) {
                  // let it happen, don't do anything
@@ -330,7 +330,7 @@
    // Ensure that it is a number and stop the keypress
     if ((e.shiftKey || (e.keyCode < 48 || e.keyCode > 57)) && (e.keyCode < 96 || e.keyCode > 105)) {
         e.preventDefault();
-    }        
+    }
   });
 
 
@@ -340,12 +340,12 @@
 
   $("#create_partner").submit(function(event){
     var name = $("#group_name").val().trim().toLowerCase();
-    var nodes = {{nodes_list|safe}} 
+    var nodes = {{nodes_list|safe}}
 
     if (name != "")
     {
-      if (nodes.indexOf(name) != -1)  
-      { 
+      if (nodes.indexOf(name) != -1)
+      {
         $("#message").css("display", "block");
         $("#message").text("Group '"+ name +"' already exist. Please choose another name");
         event.preventDefault();
