condition added for count

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ebook.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ebook.html
@@ -58,7 +58,9 @@ margin-top:5px;
           <i class="fi-book"></i>
                 {% trans "eBooks" %}
             <span class="count">
-               {{all_ebooks.count}}
+               {% if all_ebooks %}
+                  {{all_ebooks.count}}
+               {% endif %}
             </span>
         </dd>
     </ul>
