--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/collection_ajax_view.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/collection_ajax_view.html
@@ -112,7 +112,14 @@
                   nod_type: node_type
                   // csrfmiddlewaretoken: '{{ csrf_token }}'
                 },
+                beforeSend: function ( ) {    
+                      $("#processing_screen_ModalLabel").text("Please wait");
+                      $("#processing_screen_Modal").foundation('reveal', 'open');
+                },
                 success: function(data) {
+                  $("#processing_screen_Modal").removeClass("alert");
+                  $("#processing_screen_Modal").foundation('reveal', 'close');
+                  
                   if (node_type == "Group"){
                    window.history.pushState("", "", "/{{group_name_tag}}/"+"?selected="+node.id+"");
                     $(".view_page_link").trigger('click')
@@ -274,7 +281,9 @@ ul.jqtree-tree .jqtree-element { /* Hanging Indent Setting */
 
 {% endblock %}
   
-
+  <div id="processing_screen_Modal" class="processing-screen reveal-modal medium  radius" data-reveal data-alert>
+        <div id="processing_screen_ModalLabel" class="processing-screen-label" style="font-style: normal !important;"></div>
+    </div>
   {% if topic %}
     <!-- For displaying related nodes in topic page -->
     <!-- Related node means all collection elements of its teme item i.e all siblings of topic node -->
