--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/upload_pic_widget.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/upload_pic_widget.html
@@ -1,8 +1,8 @@
 {% load ndf_tags %}
 {% load i18n %}
 
-    <div id="upload_picModal" class="reveal-modal medium alert-box radius" data-reveal data-alert>
-        <label id="upload_picModalLabel"></label>
+    <div id="upload_picModal" class="processing-screen reveal-modal medium  radius" data-reveal data-alert>
+        <div id="upload_picModalLabel" class="processing-screen-label"></div>
         <a class="close-reveal-modal">&#215;</a>
     </div>
         <div class="text-center">
