--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/styles.css
@@ -27873,6 +27873,17 @@ course-title {
   border: 1px solid #eee;
 }
 
+/* line 4576, ../../../scss/_app_styles.scss */
+.processing-screen {
+  background-color: #6153ae !important;
+}
+
+/* line 4580, ../../../scss/_app_styles.scss */
+.processing-screen-label {
+  width: 500px !important;
+  font-style: normal !important;
+}
+
 /*
 *  CLIx Platform Stylesheet
 */
